--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-xray-sdk": "^2.4.0",
     "comma-number": "^2.0.1",
+    "dotenv": "^8.2.0",
     "env-cmd": "^10.0.1",
     "express": "^4.17.1",
     "hbs": "^4.0.6",
