--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.553.0",
     "aws-xray-sdk": "^2.4.0",
     "comma-number": "^2.0.1",
     "dotenv": "^8.2.0",
