--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "aws-sdk": "^2.553.0",
     "aws-xray-sdk": "^2.4.0",
     "comma-number": "^2.0.1",
+    "connect-datadog": "0.0.9",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "hbs": "^4.0.6",
+    "node-dogstatsd": "0.0.7",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   }
